--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <h1 id="value">0</h1>
     <ul id="history"></ul>
   </div>
-
+  <div class="sidenav">
+    <button id="btn1", style="width: 0; height: 0; border-top: 20px solid transparent; border-bottom: 20px solid transparent; border-left: 50px solid blue;border-right: 50px solid blue; color: white; padding: 12px 14px;margin-top: 10px;"></button>
+  </div>
   <script src="script.js"></script>
 </body>
 </html>
